@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+utils/mapper.c: Change all sprintf() to snprintf(). Also fix a crash due to
+  division by zero when using -limit and we didn't get as far as processing any
+  maps with non-zero elevation.
+Arvid Norlander 2009-02-08
+
 utils/mapper.c: Remove some unused variables. Get rid of zero length snprintf()
   (caused GCC warning).
 Arvid Norlander 2009-02-08
